Added parameters to executable

--- a/Patterns/DirectoryWalker/src/CMakeLists.txt
+++ b/Patterns/DirectoryWalker/src/CMakeLists.txt
@@ -1,15 +1,13 @@
 cmake_minimum_required(VERSION 3.10 FATAL_ERROR)
 
-#SET(VERSION "0.1" CACHE STRING "Option")
-
 project("DirWalker")
 message(STATUS "Name: ${PROJECT_NAME}")
-#message(STATUS "Version: ${PROJECT_VERSION}")
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -O0")
+SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wall -O0 -ggdb")
 
 #libs
 add_subdirectory(FileSystem)
 
 #bins
 add_subdirectory(DirectoryWalker)
+add_subdirectory(SocketCreator)
